*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.21 ===
* Updated build scripts and dependencies.

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Implemented SIMD-optimized curve and gain processing.
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Implemented Stereo Split mode for stereo versions of plugins.
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Fixed invalid version number in metadata.

=== 1.0.11 ===
* Updated build scripts and dependencies.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Added 'Min' and 'Max' sidechain sources for the compressor.
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Updated compressor: added negative boosting gain option in 'Boosting' mode.
* Assigned more correct names for sidechain types.
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.6 ===
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated dependencies and build scripts.

=== 1.0.4 ===
* Initial release.
