@@ -54,8 +54,8 @@
 
 						<!-- Markers -->
 						<ui:attributes ox="1" oy="0">
-							<marker id="al_l" color="attack_1"/>
-							<marker id="al_r" color="attack_2"/>
+							<marker id="al_l" editable="true" width="2" pointer="vsize" color="attack_1" hcolor="attack_1"/>
+							<marker id="al_r" editable="true" width="2" pointer="vsize" color="attack_2" hcolor="attack_2"/>
 							<marker id="rl_l" color="release_1"/>
 							<marker id="rl_r" color="release_2"/>
 						</ui:attributes>
@@ -162,8 +162,8 @@
 					<dot x.id="elm_r" y.id="clm_r" color="right" bcolor="right"/>
 
 					<!-- Markers -->
-					<marker id="al_l" color="attack_1"/>
-					<marker id="al_r" color="attack_2"/>
+					<marker id="al_l" editable="true" width="2" pointer="hsize" color="attack_1" hcolor="attack_1"/>
+					<marker id="al_r" editable="true" width="2" pointer="hsize" color="attack_2" hcolor="attack_2"/>
 					<marker id="rl_l" color="release_1"/>
 					<marker id="rl_r" color="release_2"/>
 
