@@ -49,7 +49,7 @@
 
 						<!-- Markers -->
 						<ui:attributes ox="1" oy="0">
-							<marker id="al" color="attack_1"/>
+							<marker id="al" editable="true" width="2" pointer="vsize" color="attack_1" hcolor="attack_1"/>
 							<marker id="rl" color="release_1"/>
 						</ui:attributes>
 
@@ -138,7 +138,7 @@
 					<dot x.id="elm" y.id="clm" color="graph_mesh" bcolor="graph_mesh"/>
 
 					<!-- Markers -->
-					<marker id="al" color="attack_1"/>
+					<marker id="al" editable="true" width="2" pointer="hsize" color="attack_1" hcolor="attack_1"/>
 					<marker id="rl" color="release_1"/>
 
 					<!-- Text -->
