@@ -54,8 +54,8 @@
 
 						<!-- Markers -->
 						<ui:attributes ox="1" oy="0">
-							<marker id="al_m" color="attack_1"/>
-							<marker id="al_s" color="attack_2"/>
+							<marker id="al_m" editable="true" width="2" pointer="vsize" color="attack_1" hcolor="attack_1"/>
+							<marker id="al_s" editable="true" width="2" pointer="vsize" color="attack_2" hcolor="attack_2"/>
 							<marker id="rl_m" color="release_1"/>
 							<marker id="rl_s" color="release_2"/>
 						</ui:attributes>
@@ -164,8 +164,8 @@
 					<dot x.id="elm_s" y.id="clm_s" color="side" bcolor="side"/>
 
 					<!-- Markers -->
-					<marker id="al_m" color="attack_1"/>
-					<marker id="al_s" color="attack_2"/>
+					<marker id="al_m" editable="true" width="2" pointer="hsize" color="attack_1" hcolor="attack_1"/>
+					<marker id="al_s" editable="true" width="2" pointer="hsize" color="attack_2" hcolor="attack_2"/>
 					<marker id="rl_m" color="release_1"/>
 					<marker id="rl_s" color="release_2"/>
 
