@@ -54,7 +54,7 @@
 
 						<!-- Markers -->
 						<ui:attributes ox="1" oy="0">
-							<marker id="al" color="attack_1"/>
+							<marker id="al" editable="true" width="2" pointer="vsize" color="attack_1" hcolor="attack_1"/>
 							<marker id="rl" color="release_1"/>
 						</ui:attributes>
 
@@ -161,7 +161,7 @@
 					<dot x.id="elm_r" y.id="clm_r" color="right" bcolor="right" visibility=":ssplit"/>
 
 					<!-- Markers -->
-					<marker id="al" color="attack_1"/>
+					<marker id="al" editable="true" width="2" pointer="hsize" color="attack_1" hcolor="attack_1"/>
 					<marker id="rl" color="release_1"/>
 
 					<!-- Text -->
